client/.happypack/s-1809916526
SyntaxError: C:/Users/Vincent/Desktop/wemeet/client/app/app.js: Unexpected token (27:8)

[0m [90m 25 | [39m      }
 [90m 26 | [39m      [36mreturn[39m(
[31m[1m>[22m[39m[90m 27 | [39m        [33m<[39m[33mActivity[39m user[33m=[39m{userId}[33m/[39m[33m>[39m
 [90m    | [39m        [31m[1m^[22m[39m
 [90m 28 | [39m      )[33m;[39m
 [90m 29 | [39m    }
 [90m 30 | [39m    [36melse[39m{[0m

BabelLoaderError: SyntaxError: C:/Users/Vincent/Desktop/wemeet/client/app/app.js: Unexpected token (27:8)

[0m [90m 25 | [39m      }
 [90m 26 | [39m      [36mreturn[39m(
[31m[1m>[22m[39m[90m 27 | [39m        [33m<[39m[33mActivity[39m user[33m=[39m{userId}[33m/[39m[33m>[39m
 [90m    | [39m        [31m[1m^[22m[39m
 [90m 28 | [39m      )[33m;[39m
 [90m 29 | [39m    }
 [90m 30 | [39m    [36melse[39m{[0m

    at transpile (C:\Users\Vincent\Desktop\wemeet\client\node_modules\babel-loader\lib\index.js:52:13)
    at Object.module.exports (C:\Users\Vincent\Desktop\wemeet\client\node_modules\babel-loader\lib\index.js:133:12)
    at applySyncOrAsync (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:116:3)
    at HappyWorker.compile (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\HappyWorker.js:32:3)